# RescueLine

./: .gitignore  CMakeLists.txt  LineFollower.cpp  LineFollower.h  UartPY.py  main.cpp
communication/: Buffer.cpp  Buffer.h  Uart.cpp  Uart.h  UartPY.cpp  UartPY.py
test/: Cerchietti.cpp  TestColorsTracking.cpp
